<resources>
    <string name="app_name">D3</string>
    <string name="GO">GO</string>
    <string name="url_label">Please enter your URL</string>
    <string name="welcome_label">D3</string>
    <string name="err_enter_url">Enter URL</string>
    <string name="err_invalid_url">Enter valid url</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_subtitle">The power of Display Advertising</string>
    <string name="hint_url">https://www.example.com</string>
    <string name="register_success">Your device is registered</string>


    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="network_err">Please check your network connection.</string>
    <string name="refresh">Do you wish to refresh the playlist or exit?</string>
    <string name="no">Exit</string>
    <string name="yes">Refresh</string>
    <string name="login_text"><![CDATA[ Register your device \n 1. Go to url https://d3.1stzoom.com and login \n 2. Click on Devices  \n 3. Scan the QR code on the screen \n and    add your device]]></string>
</resources>